--- a/vertical_navbar.html
+++ b/vertical_navbar.html
@@ -28,54 +28,37 @@
     <li class="nav-item">
       <a href="#" class="nav-link text-dark font-italic bg-light">
                 <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>
-                Home
+                Home (About Me)
             </a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link text-dark font-italic">
+      <a href="http://52.91.203.195/bootstrap_site/" class="nav-link text-dark font-italic">
                 <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>
-                About
+                Idaho Outdoorsman
             </a>
     </li>
     <li class="nav-item">
       <a href="#" class="nav-link text-dark font-italic">
                 <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>
-                Services
+                Previous Works
             </a>
     </li>
     <li class="nav-item">
       <a href="#" class="nav-link text-dark font-italic">
                 <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>
-                Gallery
+                Photo Gallery
             </a>
     </li>
-  </ul>
-
-  <p class="text-gray font-weight-bold text-uppercase px-3 small py-4 mb-0">Charts</p>
-
-  <ul class="nav flex-column bg-white mb-0">
     <li class="nav-item">
       <a href="#" class="nav-link text-dark font-italic">
                 <i class="fa fa-area-chart mr-3 text-primary fa-fw"></i>
-                Area charts
+                App Artifact
             </a>
     </li>
     <li class="nav-item">
       <a href="#" class="nav-link text-dark font-italic">
                 <i class="fa fa-bar-chart mr-3 text-primary fa-fw"></i>
-                Bar charts
-            </a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link text-dark font-italic">
-                <i class="fa fa-pie-chart mr-3 text-primary fa-fw"></i>
-                Pie charts
-            </a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link text-dark font-italic">
-                <i class="fa fa-line-chart mr-3 text-primary fa-fw"></i>
-                Line charts
+                Social Links
             </a>
     </li>
   </ul>
@@ -86,13 +69,9 @@
 <!-- Page content holder -->
 <div class="page-content p-5" id="content">
   <!-- Toggle button -->
-  <button id="sidebarCollapse2" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle Menu</small></button>
-  <button type="button" id="sidebarCollapse" class="btn btn-primary">
-	 <i class="fa fa-bars"></i>
-	 <span class="sr-only">Toggle Menu</span>
-  </button>
+  <button onclick="myFunction()" id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle Menu</small></button>
+	
 
-  <!-- Demo content -->
   <h1 class="display-4">Jake Standerwick's Portfolio</h1>
   <h2>PAGE TITLE</h2>
   <!--<p class="lead">Snippet by <a href="https://bootstrapious.com/snippets"></p>-->
@@ -100,10 +79,17 @@
   
 
 </div>
-<!-- End demo content -->
 
     <!-- Optional JavaScript -->
-	<script src="js/navbar.js"></script>
+	<!--<script src="js/navbar.js"></script>-->
+	<script>
+	function myFunction() {
+  		console.log("made it to this point");
+		
+    	$('#sidebar, #content').toggleClass('active');
+  		
+	}
+	</script>
 	
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
