Social Links updated with links working and a finished Photo Gallery and App Artifact page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="CSS/navbar.css" rel="stylesheet">
+	  <!-- social icon libaries-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  
 	</head>
     <!-- Vertical navbar -->
@@ -22,43 +24,32 @@
     </div>
   </div>
 
-  <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Main</p>
+  <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Navigation Menu</p>
 
   <ul class="nav flex-column bg-white mb-0">
     <li class="nav-item">
       <a href="index.html" class="nav-link text-dark font-italic bg-light">
-                <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>
                 Home (About Me)
             </a>
     </li>
     <li class="nav-item">
       <a href="id_site.html" class="nav-link text-dark font-italic">
-                <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>
                 Idaho Outdoorsman
             </a>
     </li>
     <li class="nav-item">
       <a href="previous_works.html" class="nav-link text-dark font-italic">
-                <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>
                 Previous Works
             </a>
     </li>
     <li class="nav-item">
       <a href="photo_gallery.html" class="nav-link text-dark font-italic">
-                <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>
                 Photo Gallery
             </a>
     </li>
     <li class="nav-item">
       <a href="app_artifact.html" class="nav-link text-dark font-italic">
-                <i class="fa fa-area-chart mr-3 text-primary fa-fw"></i>
                 App Artifact
-            </a>
-    </li>
-    <li class="nav-item">
-      <a href="social_links.html" class="nav-link text-dark font-italic">
-                <i class="fa fa-bar-chart mr-3 text-primary fa-fw"></i>
-                Social Links
             </a>
     </li>
   </ul>
@@ -69,16 +60,25 @@
 <!-- Page content holder -->
 <div class="page-content p-5" id="content">
   <!-- Toggle button -->
-  <button onclick="myFunction()" id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle Menu</small></button>
+  <button onclick="myFunction()" id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Menu</small></button>
 	
 
   <h1 class="display-4">Jake Standerwick's Portfolio</h1>
-  <h2>PAGE TITLE</h2>
+  <h2>About Me</h2>
   <!--<p class="lead">Snippet by <a href="https://bootstrapious.com/snippets"></p>-->
   <div class="separator"></div>
   
 
 </div>
+		  <footer class="container">
+	<a href="https://www.snapchat.com/add/thejakemaster23" class="fa fa-snapchat-ghost"></a>
+	<a href="https://twitter.com/thenotoriousJTS" class="fa fa-twitter"></a>
+	<a href="https://www.youtube.com/channel/UCJCNYm5Px5nqXnmhEo2Coaw?view_as=subscriber" class="fa fa-youtube"></a>
+	<a href="https://www.instagram.com/jakestanderwick/" class="fa fa-instagram"></a>
+	<a href="https://www.reddit.com/user/TheJakeMaster24" class="fa fa-reddit"></a>
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2020, Jake Standerwick &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
 
     <!-- Optional JavaScript -->
 	<!--<script src="js/navbar.js"></script>-->
