Finished Previous works embeds and fixed navigation menu bugs

--- a/app_artifact.html
+++ b/app_artifact.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Main</p>
+  <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Navigation Menu</p>
 
   <ul class="nav flex-column bg-white mb-0">
     <li class="nav-item">
