--- a/previous_works.html
+++ b/previous_works.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Main</p>
+  <p class="text-gray font-weight-bold text-uppercase px-3 small pb-4 mb-0">Navigation Menu</p>
 
   <ul class="nav flex-column bg-white mb-0">
     <li class="nav-item">
@@ -64,12 +64,34 @@
 	
 
   <h1 class="display-4">Jake Standerwick's Portfolio</h1>
-  <h2>PAGE TITLE</h2>
+  <h2>Previous Works</h2>
   <!--<p class="lead">Snippet by <a href="https://bootstrapious.com/snippets"></p>-->
   <div class="separator"></div>
-  <p>https://youtu.be/euWI5H5XsWE
-	  https://youtu.be/aaH4Irg6gMw
+<h4>The Kuleshov Effect</h4>
+  <p>
+	  For a simple video project, I was taked with creating an artifact that demonstrated the <a href="https://en.wikipedia.org/wiki/Kuleshov_effect">Kuleshov Effect</a>. To put it simply, the idea is that after each video, there is a reaction to it. Although all of these are the same video of my face, you can begin to see different emotions in it to match what the viewer is thinking. It may be a little silly, but I thought it was interesting to say the least.
 	</p>
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cdHei-AiFvE" allowfullscreen></iframe>
+</div>
+	<h4>Basic Animation using Actionscript and Adobe Animate</h4>
+	<p>
+		This is really just a very basic animation that I accomplished in a few hours for a class I took freshman year. I may not be much of an artist, but I feel as if I have a lot to express through storytelling.
+	</p>
+	
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/euWI5H5XsWE" allowfullscreen></iframe>
+</div>
+	
+	<h4>The Pirate's Booty Flash Game</h4>
+	<p>
+		I created this game in my first semester of college, and I feel as if I learned a lot while doing so. It may not be impressive, but I credit this to much of the coding-grit I have today.
+	</p>
+	
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Btb_rRNmu7g" allowfullscreen></iframe>
+</div>
+	
 
 </div>
 		  <footer class="container">
