--- a/id_site.html
+++ b/id_site.html
@@ -13,10 +13,10 @@
 	  
 	</head>
     <!-- Vertical navbar -->
-	  <body>
-<div class="vertical-nav bg-white" id="sidebar">
-  <div class="py-5 px-3 mb-2 bg-light">
-    <div class="rotate"><img src="Images/fish.jpg" alt="profilePic" width="200px" height="100px">
+	  <body class="page-style">
+<div class="vertical-nav navbar-style" id="sidebar">
+  <div class="py-5 px-4 mb-2 navbar-style">
+    <div><img src="Images/face_shot.jpg" alt="profilePic" width="200px">
       <!--<div class="media-body">
         <h4 class="m-0">Jake Standerwick</h4>
         <p class="font-weight-light text-muted mb-0">Student Portfolio</p>
@@ -28,27 +28,27 @@
 
   <ul class="nav flex-column bg-white mb-0">
     <li class="nav-item">
-      <a href="index.html" class="nav-link text-dark font-italic bg-light">
+      <a href="index.html" class="nav-link text-dark font-italic navbar-style">
                 Home (About Me)
             </a>
     </li>
     <li class="nav-item">
-      <a href="id_site.html" class="nav-link text-dark font-italic">
+      <a href="id_site.html" class="nav-link text-dark font-italic navbar-style">
                 Idaho Outdoorsman
             </a>
     </li>
     <li class="nav-item">
-      <a href="previous_works.html" class="nav-link text-dark font-italic">
+      <a href="previous_works.html" class="nav-link text-dark font-italic navbar-style">
                 Previous Works
             </a>
     </li>
     <li class="nav-item">
-      <a href="photo_gallery.html" class="nav-link text-dark font-italic">
+      <a href="photo_gallery.html" class="nav-link text-dark font-italic navbar-style">
                 Photo Gallery
             </a>
     </li>
     <li class="nav-item">
-      <a href="app_artifact.html" class="nav-link text-dark font-italic">
+      <a href="app_artifact.html" class="nav-link text-dark font-italic navbar-style">
                 App Artifact
             </a>
     </li>
@@ -60,14 +60,20 @@
 <!-- Page content holder -->
 <div class="page-content p-5" id="content">
   <!-- Toggle button -->
-  <button onclick="myFunction()" id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle Menu</small></button>
+  <button onclick="myFunction()" id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Menu</small></button>
 	
 
   <h1 class="display-4">Jake Standerwick's Portfolio</h1>
-  <h2>PAGE TITLE</h2>
+  <h2>Idaho Outdoorsman</h2>
   <!--<p class="lead">Snippet by <a href="https://bootstrapious.com/snippets"></p>-->
   <div class="separator"></div>
-  
+  <p>
+	Idaho Outdoorsman is one of the projects I have wanted to do for a long time, and I finally did it in order to fulfill the requirements of a class project. I am an avid outdoorsman, and I love to travel when I am not working. I have been all over the state of Idaho and other places in the Western United States. This website was made with Wordpress and goes over several of the trips I love to go on, and documents some of the cool things I have done in the State since moving here in 2003.
+	  <a href="http://52.91.203.195/">This is the link to my site, and I hope you enjoy some of the pictures and videos I have created in it.</a>
+	</p>
+	
+	<img src="images/header_page_wp.png" alt="header page of WP site" width="1000rem">
+	<img src="images/trip_page_wp.png" alt="trip page of WP site" width="1000rem">
 
 </div>
 		  <footer class="container">
