--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	  
 	</head>
     <!-- Vertical navbar -->
-	  <body>
-<div class="vertical-nav bg-white" id="sidebar">
-  <div class="py-5 px-3 mb-2 bg-light">
-    <div class="rotate"><img src="Images/fish.jpg" alt="profilePic" width="200px" height="100px">
+	  <body class="page-style">
+<div class="vertical-nav navbar-style" id="sidebar">
+  <div class="py-5 px-4 mb-2 navbar-style">
+    <div><img src="Images/face_shot.jpg" alt="profilePic" width="200px">
       <!--<div class="media-body">
         <h4 class="m-0">Jake Standerwick</h4>
         <p class="font-weight-light text-muted mb-0">Student Portfolio</p>
@@ -28,27 +28,27 @@
 
   <ul class="nav flex-column bg-white mb-0">
     <li class="nav-item">
-      <a href="index.html" class="nav-link text-dark font-italic bg-light">
+      <a href="index.html" class="nav-link text-dark font-italic navbar-style">
                 Home (About Me)
             </a>
     </li>
     <li class="nav-item">
-      <a href="id_site.html" class="nav-link text-dark font-italic">
+      <a href="id_site.html" class="nav-link text-dark font-italic navbar-style">
                 Idaho Outdoorsman
             </a>
     </li>
     <li class="nav-item">
-      <a href="previous_works.html" class="nav-link text-dark font-italic">
+      <a href="previous_works.html" class="nav-link text-dark font-italic navbar-style">
                 Previous Works
             </a>
     </li>
     <li class="nav-item">
-      <a href="photo_gallery.html" class="nav-link text-dark font-italic">
+      <a href="photo_gallery.html" class="nav-link text-dark font-italic navbar-style">
                 Photo Gallery
             </a>
     </li>
     <li class="nav-item">
-      <a href="app_artifact.html" class="nav-link text-dark font-italic">
+      <a href="app_artifact.html" class="nav-link text-dark font-italic navbar-style">
                 App Artifact
             </a>
     </li>
@@ -67,7 +67,27 @@
   <h2>About Me</h2>
   <!--<p class="lead">Snippet by <a href="https://bootstrapious.com/snippets"></p>-->
   <div class="separator"></div>
-  
+  <div class="block">
+      <div class="row">
+        <div class="span4">
+          <img src="Images/disneyland.jpg" alt="image" width="600rem" class="img-left img-fluid"/>
+          <div class="content-heading"><h3>Who Am I?</h3></div>
+          <p>I grew up in Idaho City, Idaho, which is a tiny town north of Boise, ID</p>
+          <p>I love being in the outdoors, but my biggest passion is technology. Anything tech related is truly what I love, and that is a large reason I am in the GIMM (Games, Interactive Media, and Mobile development) program at Boise State University. I am currently a Sophomore going into my Junior year.</p>
+        </div>
+     </div>
+     <br/>
+      <div class="row">
+        <div class="span4">
+          <img class="img-right img-fluid" src="Images/fire1.jpg"  width="600rem" alt="image"/>
+          <div class="content-heading"><h3>Experiences</h3></div>
+          <p>A variety of jobs have really let me see the world, as I have worked all across the Western United States</p>
+          <p>Notable jobs include being a base camp manager/clerical director for massive incidents, such as wildfires, as well as working for the labor union in Juneau, Alaska laying 16" water main down a central highway.</p>
+          <p>At this point, I have had so many experiences that I feel extremely comfortable both under pressure and when I am given large tasks.</p>
+			<p><a href="Random Files/College Resume.docx">Here is a sample of my resume</a></p>
+        </div>
+     </div>
+    </div>
 
 </div>
 		  <footer class="container">
