--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -13,10 +13,10 @@
 	  
 	</head>
     <!-- Vertical navbar -->
-	  <body>
-<div class="vertical-nav bg-white" id="sidebar">
-  <div class="py-5 px-3 mb-2 bg-light">
-    <div class="rotate"><img src="Images/fish.jpg" alt="profilePic" width="200px" height="100px">
+	  <body class="page-style">
+<div class="vertical-nav navbar-style" id="sidebar">
+  <div class="py-5 px-4 mb-2 navbar-style">
+    <div><img src="Images/face_shot.jpg" alt="profilePic" width="200px">
       <!--<div class="media-body">
         <h4 class="m-0">Jake Standerwick</h4>
         <p class="font-weight-light text-muted mb-0">Student Portfolio</p>
@@ -28,27 +28,27 @@
 
   <ul class="nav flex-column bg-white mb-0">
     <li class="nav-item">
-      <a href="index.html" class="nav-link text-dark font-italic bg-light">
+      <a href="index.html" class="nav-link text-dark font-italic navbar-style">
                 Home (About Me)
             </a>
     </li>
     <li class="nav-item">
-      <a href="id_site.html" class="nav-link text-dark font-italic">
+      <a href="id_site.html" class="nav-link text-dark font-italic navbar-style">
                 Idaho Outdoorsman
             </a>
     </li>
     <li class="nav-item">
-      <a href="previous_works.html" class="nav-link text-dark font-italic">
+      <a href="previous_works.html" class="nav-link text-dark font-italic navbar-style">
                 Previous Works
             </a>
     </li>
     <li class="nav-item">
-      <a href="photo_gallery.html" class="nav-link text-dark font-italic">
+      <a href="photo_gallery.html" class="nav-link text-dark font-italic navbar-style">
                 Photo Gallery
             </a>
     </li>
     <li class="nav-item">
-      <a href="app_artifact.html" class="nav-link text-dark font-italic">
+      <a href="app_artifact.html" class="nav-link text-dark font-italic navbar-style">
                 App Artifact
             </a>
     </li>
@@ -60,7 +60,7 @@
 <!-- Page content holder -->
 <div class="page-content p-5" id="content">
   <!-- Toggle button -->
-  <button onclick="myFunction()" id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Toggle Menu</small></button>
+  <button onclick="myFunction()" id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Menu</small></button>
 	
 
   <h1 class="display-4">Jake Standerwick's Portfolio</h1>
