ACTUALLY fixed the photo bug

--- a/id_site.html
+++ b/id_site.html
@@ -72,8 +72,8 @@
 	  <a href="http://52.91.203.195/">This is the link to my site, and I hope you enjoy some of the pictures and videos I have created in it.</a>
 	</p>
 	
-	<img src="images/header_page_wp.png" alt="header page of WP site" width="1000rem">
-	<img src="images/trip_page_wp.png" alt="trip page of WP site" width="1000rem">
+	<img src="Images/header_page_wp.png" alt="header page of WP site" width="1000rem">
+	<img src="Images/trip_page_wp.png" alt="trip page of WP site" width="1000rem">
 
 </div>
 		  <footer class="container">
