--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -114,6 +114,12 @@
   </div>
   <!-- Grid column -->
 	
+<!-- Grid column -->
+  <div class="mb-3 pics animation all 1">
+    <img class="img-fluid" src="Images/beach.JPG" alt="Card image cap">
+  </div>
+  <!-- Grid column -->
+	
 	<!-- Grid column -->
   <div class="mb-3 pics animation all 1">
     <img class="img-fluid" src="Images/football.png" alt="Card image cap">
